projetos/desafio-final-dk8s/semana-1/k8s/network-policies/allow-tipsbank-contas.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-api-contas
  namespace: tipsbank-contas
spec:
  podSelector:
    matchLabels:
      app: api-contas
  policyTypes:
    - Ingress
  ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: ingress-nginx
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: tipsbank-web
            podSelector:
              matchLabels:
                app: web
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: tipsbank-transacoes
            podSelector:
              matchLabels:
                app: api-transacoes
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: tipsbank-transacoes
            podSelector:
              matchLabels:
                app: api-transacoes-v2
        ports:
          - port: 8080
            protocol: TCP
---

  # Ingress: postgres aceita de api-contas (mesmo ns) e transacoes (initContainer)

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-postgres
  namespace: tipsbank-contas
spec:
  podSelector:
    matchLabels:
        app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-contas
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-transacoes
      ports:
        - port: 5432
          protocol: TCP
---

# Egress: api-contas → postgres (mesmo namespace)

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-contas-to-postgres
  namespace: tipsbank-contas
spec:
  podSelector:
    matchLabels:
      app: api-contas
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
          protocol: TCP

---

# Egress: DNS para o namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress-contas
  namespace: tipsbank-contas
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
