projetos/desafio-final-dk8s/semana-1/k8s/network-policies/allow-tipsbank-transacoes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-api-transacoes
  namespace: tipsbank-transacoes
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["api-transacoes", "api-transacoes-v2"]
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
            matchLabels:
                kubernetes.io/metadata.name: ingress-nginx
      - namespaceSelector:
          matchLabels:
              kubernetes.io/metadata.name: tipsbank-web
        podSelector:
          matchLabels:
              app: web
      ports:
        - port: 8080
          protocol: TCP

---

# Egress: transacoes para api-contas e postgres em tipsbank-contas

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-transacoes-to-contas
  namespace: tipsbank-transacoes
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["api-transacoes", "api-transacoes-v2"]
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: tipsbank-contas
        podSelector:
          matchLabels:
            app: api-contas
      ports:
          - port: 8080
            protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-contas
          podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
          protocol: TCP

---

  # Egress: transacoes para  auditoria

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-transacoes-to-auditoria
  namespace: tipsbank-transacoes
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["api-transacoes", "api-transacoes-v2"]
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-auditoria
          podSelector:
            matchLabels:
              app: auditoria
      ports:
        - port: 8080
          protocol: TCP

---

  # Egress: DNS

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress-transacoes
  namespace: tipsbank-transacoes
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
